Fixing compilation after #13119 backport